@@ -595,21 +595,6 @@ name|search
 operator|.
 name|spans
 operator|.
-name|Spans
-import|;
-end_import
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|search
-operator|.
-name|spans
-operator|.
 name|SpanTermQuery
 import|;
 end_import
@@ -626,6 +611,38 @@ operator|.
 name|spans
 operator|.
 name|SpanWeight
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|search
+operator|.
+name|spans
+operator|.
+name|Spans
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|spatial
+operator|.
+name|geopoint
+operator|.
+name|search
+operator|.
+name|GeoPointInBBoxQuery
 import|;
 end_import
 begin_import
@@ -1637,6 +1654,16 @@ argument_list|,
 name|terms
 argument_list|)
 expr_stmt|;
+block|}
+elseif|else
+if|if
+condition|(
+name|query
+operator|instanceof
+name|GeoPointInBBoxQuery
+condition|)
+block|{
+comment|// nothing
 block|}
 else|else
 block|{
