@@ -18,28 +18,6 @@ package|;
 end_package
 begin_import
 import|import
-name|javax
-operator|.
-name|xml
-operator|.
-name|parsers
-operator|.
-name|DocumentBuilder
-import|;
-end_import
-begin_import
-import|import
-name|javax
-operator|.
-name|xml
-operator|.
-name|parsers
-operator|.
-name|DocumentBuilderFactory
-import|;
-end_import
-begin_import
-import|import
 name|java
 operator|.
 name|io
@@ -137,6 +115,28 @@ operator|.
 name|util
 operator|.
 name|StringTokenizer
+import|;
+end_import
+begin_import
+import|import
+name|javax
+operator|.
+name|xml
+operator|.
+name|parsers
+operator|.
+name|DocumentBuilder
+import|;
+end_import
+begin_import
+import|import
+name|javax
+operator|.
+name|xml
+operator|.
+name|parsers
+operator|.
+name|DocumentBuilderFactory
 import|;
 end_import
 begin_import
@@ -457,6 +457,8 @@ operator|.
 name|index
 operator|.
 name|IndexWriterConfig
+operator|.
+name|OpenMode
 import|;
 end_import
 begin_import
@@ -470,8 +472,6 @@ operator|.
 name|index
 operator|.
 name|IndexWriterConfig
-operator|.
-name|OpenMode
 import|;
 end_import
 begin_import
@@ -541,6 +541,19 @@ operator|.
 name|BooleanClause
 operator|.
 name|Occur
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|search
+operator|.
+name|BooleanClause
 import|;
 end_import
 begin_import
@@ -632,6 +645,8 @@ operator|.
 name|search
 operator|.
 name|PhraseQuery
+operator|.
+name|Builder
 import|;
 end_import
 begin_import
@@ -645,8 +660,6 @@ operator|.
 name|search
 operator|.
 name|PhraseQuery
-operator|.
-name|Builder
 import|;
 end_import
 begin_import
@@ -920,6 +933,23 @@ operator|.
 name|spans
 operator|.
 name|SpanTermQuery
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|spatial
+operator|.
+name|geopoint
+operator|.
+name|search
+operator|.
+name|GeoPointInBBoxQuery
 import|;
 end_import
 begin_import
@@ -1394,6 +1424,197 @@ argument_list|(
 literal|"Hello this is a piece of text that is<B>very</B> long and contains too much preamble and the meat is really here which says kennedy has been shot"
 argument_list|,
 name|fragment
+argument_list|)
+expr_stmt|;
+block|}
+DECL|method|testGeoPointQueryHighlight
+specifier|public
+name|void
+name|testGeoPointQueryHighlight
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|BooleanQuery
+name|boolQuery
+init|=
+operator|new
+name|BooleanQuery
+operator|.
+name|Builder
+argument_list|()
+operator|.
+name|add
+argument_list|(
+operator|new
+name|BooleanClause
+argument_list|(
+operator|new
+name|GeoPointInBBoxQuery
+argument_list|(
+literal|"geo_point"
+argument_list|,
+operator|-
+literal|64.92354174306496
+argument_list|,
+literal|61.10078883158897
+argument_list|,
+operator|-
+literal|170.15625
+argument_list|,
+literal|118.47656249999999
+argument_list|)
+argument_list|,
+name|BooleanClause
+operator|.
+name|Occur
+operator|.
+name|SHOULD
+argument_list|)
+argument_list|)
+operator|.
+name|add
+argument_list|(
+operator|new
+name|BooleanClause
+argument_list|(
+operator|new
+name|TermQuery
+argument_list|(
+operator|new
+name|Term
+argument_list|(
+name|FIELD_NAME
+argument_list|,
+literal|"instances"
+argument_list|)
+argument_list|)
+argument_list|,
+name|BooleanClause
+operator|.
+name|Occur
+operator|.
+name|SHOULD
+argument_list|)
+argument_list|)
+operator|.
+name|build
+argument_list|()
+decl_stmt|;
+name|CustomScoreQuery
+name|query
+init|=
+operator|new
+name|CustomScoreQuery
+argument_list|(
+name|boolQuery
+argument_list|)
+decl_stmt|;
+name|searcher
+operator|=
+name|newSearcher
+argument_list|(
+name|reader
+argument_list|)
+expr_stmt|;
+name|TopDocs
+name|hits
+init|=
+name|searcher
+operator|.
+name|search
+argument_list|(
+name|query
+argument_list|,
+literal|10
+argument_list|)
+decl_stmt|;
+name|QueryScorer
+name|scorer
+init|=
+operator|new
+name|QueryScorer
+argument_list|(
+name|query
+argument_list|,
+name|FIELD_NAME
+argument_list|)
+decl_stmt|;
+name|Highlighter
+name|highlighter
+init|=
+operator|new
+name|Highlighter
+argument_list|(
+name|scorer
+argument_list|)
+decl_stmt|;
+specifier|final
+name|int
+name|docId0
+init|=
+name|hits
+operator|.
+name|scoreDocs
+index|[
+literal|0
+index|]
+operator|.
+name|doc
+decl_stmt|;
+name|Document
+name|doc
+init|=
+name|searcher
+operator|.
+name|doc
+argument_list|(
+name|docId0
+argument_list|)
+decl_stmt|;
+name|String
+name|storedField
+init|=
+name|doc
+operator|.
+name|get
+argument_list|(
+name|FIELD_NAME
+argument_list|)
+decl_stmt|;
+name|TokenStream
+name|stream
+init|=
+name|getAnyTokenStream
+argument_list|(
+name|FIELD_NAME
+argument_list|,
+name|docId0
+argument_list|)
+decl_stmt|;
+name|Fragmenter
+name|fragmenter
+init|=
+operator|new
+name|SimpleSpanFragmenter
+argument_list|(
+name|scorer
+argument_list|)
+decl_stmt|;
+name|highlighter
+operator|.
+name|setTextFragmenter
+argument_list|(
+name|fragmenter
+argument_list|)
+expr_stmt|;
+name|highlighter
+operator|.
+name|getBestFragment
+argument_list|(
+name|stream
+argument_list|,
+name|storedField
 argument_list|)
 expr_stmt|;
 block|}
